# tosenv

./: mustdo.md
tos_env/: .dockerignore  Dockerfile  README.md  README_HF.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  smoke_test.py  test_output.txt
tos_env/data/: corpus.py
tos_env/server/: __init__.py  app.py  requirements.txt  tos_environment.py
tos_env/tests/: test_environment.py
