[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "tos-risk-analyzer"
version         = "1.0.0"
description     = "OpenEnv environment for Terms of Service risk analysis"
readme          = "README.md"
requires-python = ">=3.10"
license         = {text = "MIT"}

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "openenv-core>=0.2.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
